<resources>
    <string name="app_name">teprovoxa</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exit">exit</string>
    <string name="welcome">Welcome</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Create account</string>
    <string name="login">Log in</string>
    <string name="logout">Log out</string>
    <string name="add_challenge">Add challenge</string>
    <string name="remember_me">remember me</string>
    <string name="title">Title</string>
    <string name="description">Description</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="login_success">Logged in</string>
    <string name="register_success">Account created</string>
    <string name="challenge_add_success">Challenge added</string>
    <string name="bad_credentials_format">Username and password must be longer than 3 characters and not contain spaces.</string>
    <string name="bad_credentials">Username/password incorrect</string>
    <string name="username_taken">Username is taken.</string>
    <string name="generic_error">Something didn\'t work, but we don\'t know what. This shouldn\'t have happened.</string>
    <string name="comment_post_success">Comment posted</string>
    <string name="pick_image_intent_text">\"\"</string>
    <string name="camera">camera</string>
    <string name="gallery">Gallery</string>
    <string name="choose_img">Choose image</string>
    <string name="where_from">But where from?</string>
    <string name="img_pick_success">Image picked</string>

    <string name="passwords_dont_match">Passwords do not match</string>
    <string name="repeat_password">Repeat password</string>


</resources>