<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RegisterFragment">

    <TextView
        android:id="@+id/reg_welcometext"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"

        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"
        android:textAlignment="center"
        android:textSize="60dp"
        android:text="@string/welcome"
        />
    <TextView
        android:id="@+id/reg_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/reg_welcometext"
        android:layout_marginTop="100dp"

        android:textAlignment="center"
        android:textSize="30dp"
        android:text="@string/username" />
    <TextView
        android:id="@+id/reg_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/reg_username"

        android:layout_marginTop="100dp"
        android:textAlignment="center"
        android:textSize="30dp"
        android:text="@string/hello_blank_fragment" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/reg_password"
        android:textSize="40dp"
        android:textAlignment="center"
        android:layout_marginTop="100dp"
        android:text="@string/register"/>

</androidx.constraintlayout.widget.ConstraintLayout>