<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.WelcomeFragment">

    <TextView
        android:id="@+id/w_welcometext"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"



        android:textSize="60dp"
        android:text="@string/welcome" />
    <Button
        app:layout_constraintTop_toBottomOf="@id/w_welcometext"

        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"

        android:id="@+id/w_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:textAlignment="center"
        android:textSize="40dp"
        android:text="@string/login"
        android:textColor="@color/color_selector"
        android:background="@drawable/button_selector"
        />

    <Button

        app:layout_constraintTop_toBottomOf="@id/w_login_btn"


        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"

        android:background="@drawable/button_selector"
        android:id="@+id/w_reg_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/color_selector"
        android:textAlignment="center"
        android:textSize="40dp"
        android:text="@string/register"
        />

</androidx.constraintlayout.widget.ConstraintLayout>